# namazu

./: .cvsignore  AUTHORS  BUGS-ja  CHANGES-2.0-ja.txt  COMMITTERS  CREDITS  ChangeLog  ChangeLog.1  ChangeLog.2  HACKING  HACKING-ja  INSTALL  Makefile.am  Makefile.in  NEWS  PATCHES.GT  PATCHES.LT  README  README-es  README-ja  THANKS  TODO  TODO-namazu-2.0  TODO-satoru  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  coding-rule-mknmz.txt  config.h.in  configure  configure.in  design.c  maintMakefile  make_sjis_po  namazu.spec  namazu.spec.in  nmz-config.in
conf/: Makefile.am  Makefile.in  mknmz.conf-dist  mknmz.conf-dist.in  namazu.conf-dist  namazurc  namazurc-sample  namazurc-sample.win32
filter/: Makefile.am  Makefile.in  apachecache.pl  applefile.pl  bzip2.pl  bzip2.pl.in  compress.pl  compress.pl.in  deb.pl  doccat.pl  dvi.pl  epub.pl  excel.pl  gfilter.pl  gnumeric.pl  gzip.pl  gzip.pl.in  hdml.pl  hnf.pl  html.pl  ichitaro456.pl  koffice.pl  lha.pl  macbinary.pl  mailnews.pl  man.pl  man.pl.in  markdown.pl  mdi.pl  mhonarc.pl  mp3.pl  msofficexml.pl  msword.pl  msword.pl.in  oasys.pl  oleexcel.pl  olemsword.pl  olepowerpoint.pl  ooo.pl  pdf.pl  (+19 more)
filter/win32/: Makefile.am  excel.pl  ichitaro456.pl  msword.pl  oleexcel.pl  olemsword.pl  olepowerpoint.pl  olertf.pl  oletaro.pl  oletaro4.pl  oletaro5.pl  oletaro6.pl  oletaro7.pl  oletaro8.pl  olevisio.pl  powerpoint.pl  xdoc2txt.pl
lib/: Makefile.am  Makefile.in  NMZ.body.en  NMZ.body.ja  NMZ.foot.en  NMZ.foot.ja  NMZ.head.en  NMZ.head.ja  NMZ.result  adhoc.c  adhoc.h  codeconv.pl  conf.pl.in  easy-vsnprintf.c  filter.pl  find.pl  getopt.c  hash.pl  html.pl  seed.pl  usage.pl  util.pl  var.pl.in  wakati.pl
man/: Makefile.am  mknmz.1  namazu.1
nmz/: .cvsignore  Makefile.am  alias.c  alias.h  codeconv.c  codeconv.h  conf.c  conf.h  critical.h  field.c  field.h  get-extern-funcs.pl  hlist.c  hlist.h  i18n.c  i18n.h  idxname.c  idxname.h  l10n-ja.c  libnamazu.c  libnamazu.h  magic.h  maintMakefile  memcmp.c  memmove.c  memset.c  mode.c  mode.h  nmzversion.c.in  nmzversion.h.in  parser.c  parser.h  query.c  query.h  rcfile.c  rcfile.h  re.c  re.h  regex-ruby.c  regex.c  (+19 more)
pl/: Makefile.am  Makefile.in  builtinwakati.pl  codeconv.pl  conf.pl.in  document.pl  ext.pl  extzip.pl  filter.pl  filter.pl.in  find.pl  gettext.pl.in  gfilter.pl  htmlsplit.pl  indexer.pl  nmzidx.pl  seed.pl  time.pl  usage.pl  util.pl  var.pl.in  wakati.pl
po/: de.po  (+19 more)
scripts/: .cvsignore  Makefile.am  adnmz.in  bnamazu.in  gcnmz.in  gcnmz.pl.in  gtnmz.in  kwnmz.in  kwnmz.pl.in  lnnmz.in  load_dict.in  mailutime.in  mknmz.in  mknmz.pl.in  nmzcat.in  nmzegrep.in  nmzgrep.in  nmzmerge.in  rfnmz.in  vfnmz.in
src/: .cvsignore  Makefile.am  Makefile.in  cgi.c  cgi.h  clnmz.in  codeconv.c  codeconv.h  conf.c  conf.h  critical.h  em.h  enum.h  field.c  field.h  form.c  form.h  gcnmz.in  gcnmz.pl.in  gtnmz.in  hlist.c  hlist.h  i18n.c  idxname.c  idxname.h  kwnmz.pl.in  libnamazu.c  libnamazu.h  magic.h  mailutime.in  message.c  message.h  messages.c  mknmz.pl.in  namazu-cgi.c  namazu-cmd.c  namazu.c  namazu.h  nmzgrep.in  output.c  (+29 more)
template/: Makefile.am  NMZ.body  NMZ.body.es  NMZ.body.fr  NMZ.body.ja  NMZ.body.ja_JP.JIS7  NMZ.body.pl  NMZ.foot.en  NMZ.foot.es  NMZ.foot.fr  NMZ.foot.in  NMZ.foot.ja  NMZ.foot.ja.in  NMZ.foot.ja_JP.JIS7.in  NMZ.foot.pl  NMZ.head  NMZ.head.de  NMZ.head.en  NMZ.head.es  NMZ.head.fr  NMZ.head.in  NMZ.head.ja  NMZ.head.ja.in  NMZ.head.ja_JP.JIS7.in  NMZ.head.pl  NMZ.result.normal  NMZ.result.normal.de  NMZ.result.normal.es  NMZ.result.normal.fr  NMZ.result.normal.ja  NMZ.result.normal.pl  NMZ.result.short  NMZ.result.short.de  NMZ.result.short.es  NMZ.result.short.fr  NMZ.result.short.ja  NMZ.result.short.pl  NMZ.tips  NMZ.tips.es  NMZ.tips.fr  (+4 more)
tests/: .cvsignore  Makefile.am  commonfuncs  gcnmz-1  idxdiff-1  idxdiff-2  idxdiff-3  ja-documentpl-1  ja-mknmz-1  ja-mknmz-2  ja-mknmz-3  ja-mknmz-4  ja-mknmz-5  ja-namazu-1  ja-namazu-2  ja-namazu-3  ja-namazu-4  ja-namazu-5  ja-namazu-cgi-1  ja-namazu-cgi-2  ja-namazu-cgi-3  mknmz-1  mknmz-10  mknmz-11  mknmz-12  mknmz-13  mknmz-14  mknmz-15  mknmz-16  mknmz-17  mknmz-18  mknmz-19  mknmz-2  mknmz-3  mknmz-4  mknmz-5  mknmz-6  mknmz-7  mknmz-8  mknmz-9  (+28 more)
tests/data/: Makefile.am
tests/data/decodebase64/: multi-part-mail.txt
tests/data/en/: Makefile.am  apachecache.txt  excel97.xls  hdml.hdml  kspread.ksp  kword.kwd  tex.tex
tests/data/filter/: Makefile.am  testfilter.pl
tests/data/html-split/: Makefile.am  html-split.html
tests/data/ja/: Makefile.am  apachecache.txt  epub2.epub  excel2007.xlsx  excel2007.xps  gnumeric.gnumeric  hdml.hdml  illustrator9.ai  illustrator9.swf  lha.lzh  markdown.md  msdocumentimaging.mdi  oasys.oa2  oasys.oas  powerpoint2002.rtf  powerpoint2007.ppsx  powerpoint2007.pptx  powerpoint2007.xps  rpm.rpm  rtf.rtf  visio2007.vdx  visio2007.vsd  visio2007.xps  visio2010.vdx  visio2013.vsdx  visio2016.vsdx  word2007.docx  word2007.xps  xps.xps
tests/data/ja-appl90/: Makefile.am  README.TXT  excel2001.htm  excel2001.xls  excel5-2001.xls  excel95.xls  powerpoint2001.pps  powerpoint2001.ppt  powerpoint2001.rtf  powerpoint4_0.ppt  word.txt  word2001.doc  word2001.htm  word2001.rtf  word95.doc
tests/data/ja-mac/: Makefile.am  README.TXT  excel2001.htm  excel2001.xls  excel5-2001.xls  excel5.xls  excel95.xls  excel98.xls  plain.txt  powerpoint2001.pps  powerpoint2001.ppt  powerpoint2001.rtf  powerpoint4.ppt  powerpoint4_0.ppt  simpletext.txt  textedit.rtf  word.txt  word2001.doc  word2001.htm  word2001.rtf  word6.doc  word95.doc  word98.doc
tests/data/ja-spec/: Makefile.am
tests/data/ja-wakati/: Makefile.am  builtin-m-test.txt  testdict
tknamazu/: .cvsignore  ChangeLog  Makefile  Makefile.W32  Makefile.am  Makefile.in  README.tknamazu  autogen.sh  configure  configure.in  tknamazu.bat.sample  tknamazu.hlp  tknamazu.hlp.en  tknamazu.hlp.ja  tknamazu.hlp.ja_JP.SJIS  tknamazu.ppm  tknamazu.sample  tknamazu.spec.in  tknamazu.tcl  tknamazu.tcl.in  tknamazu.xpm  tknamazu_icon.ppm  tknamazu_logo.ppm  tknamazurc.in  tknmzrc
wakatidict/: Makefile.am
(+123 files in other folders)
